<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2012 Sweetie Piggy Apps <sweetiepiggyapps@gmail.com>

    This file is part of Report Malaysia Taxi.

    Report Malaysia Taxi is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Report Malaysia Taxi is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Report Malaysia Taxi ; if not, write to the Free Software
    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
-->

<resources>

	<string name="app_name">Report Malaysia Taxi</string>
	<string name="date_and_time">Date and Time of Incident</string>
	<string name="location">Location</string>
	<string name="registration">Registration Number of Taxi</string>
	<string name="offence">Nature of Offence</string>

	<string name="language">Language</string>
	<string name="settings">Preferences</string>
	<string name="about">About</string>
	<string name="resources">Resources</string>
	<string name="fare_rate">Fare Rate</string>
	<string name="fare_calc">Fare Calculator</string>
	<string name="contacts">Contact Info</string>

	<string name="location_hint">Enter location of incident</string>
	<string name="registration_hint">Enter car plate number, e.g. HWA9999</string>
	<string name="other_hint">Enter additional details to include in complaint (optional)</string>

	<string-array name="offence_array">
		<item>Refused to use meter</item>
		<item>Refused to take passenger</item>
		<item>Refused to give change</item>
		<item>Reckless driving</item>
		<item>Offered illegal services</item>
		<item>Harrassment</item>
		<item>Smoking in Taxi</item>
		<item>Other</item>
	</string-array>

	<string name="other">Details</string>
	<string name="sms">sms</string>
	<string name="tweet">tweet</string>
	<string name="email">email</string>
	<string name="submit">submit</string>
	<string name="cancel">clear</string>
	<!--<string name="youtube">youtube</string>-->
	<string name="youtube"></string>
	<string name="call">call</string>

	<string name="missing_reg">enter registration number</string>
	<string name="missing_other">enter other comments</string>
	<string name="select_checkbox">select a checkbox</string>

	<string name="send_youtube">Upload to YouTube</string>
	<string name="send_tweet">Send tweet</string>
	<string name="send_email">Send email</string>
	<string name="place_call">Place call</string>

	<string name="lk_jb_kt_m">Kuala Lumpur, Johor Baru, Kuala Terengganu, Melaka</string>
	<string name="penang">Penang</string>
	<string name="airports">Airports</string>

	<string name="km">km</string>
	<string name="minutes">minutes</string>
	<string name="fare">Fare (RM)</string>

	<string name="distance">Distance (km)</string>
	<string name="time">Time (minutes)</string>
	<string name="executive">executive taxi</string>
	<string name="midnight">midnight charge (12AM to 6AM)</string>
	<string name="passengers">Number of Passengers</string>
	<string name="telbooking">telephone booking</string>
	<string name="distance_hint">Enter distance in km</string>
	<string name="passengers_hint">Enter number of passengers</string>
	<string name="time_hint">Enter time in minutes</string>

	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="sunday">Sunday</string>

	<string name="spad">SPAD</string>
	<string name="lpkp">LPKP</string>
	<string name="jpj">JPJ</string>
	<string name="kpdnkk">KPDNKK</string>
	<string name="motour">Ministry of Tourism</string>
	<string name="pcb">Public Complaints Bureau</string>
	<string name="pemudah">PEMUDA</string>
	<string name="ttpm">Tribunal for Consumer Claims</string>
	<string name="spad_desc">Land Transport Commission</string>
	<string name="lpkp_desc">Commercial Vehicle Licensing Board</string>
	<string name="jpj_desc">Road Transport Department</string>
	<string name="kpdnkk_desc">Ministry of Domestic Trade, Cooperative and Consumerism</string>
	<string name="motour_desc"></string>
	<string name="pcb_desc"></string>
	<string name="pemudah_desc">Entrepreneur and Cooperatives Development Ministry</string>
	<string name="ttpm_desc"></string>

	<string name="transit">TRANSIT</string>
	<string name="nccc">National Consumer Complaints Centre</string>
	<string name="spad_chairman">Chairman of SPAD</string>
	<string name="mo_transport">Minister of Transport</string>
	<string name="mo_tourism">Minister of Tourism</string>
	<string name="prime_minister">Prime Minister</string>

	<string name="who_email">Select Who to Email</string>
	<string name="done">Done</string>
	<string name="details">Details</string>
	<string-array name="email_choices">
		<item>SPAD</item>
		<item>Other Government Departments</item>
		<item>Consumer Groups</item>
		<item>Government Ministers</item>
		<item>News Media</item>
		<item>Traffic Police</item>
	</string-array>
	<string-array name="contact_choices">
		<item>Government Departments</item>
		<item>Consumer Groups</item>
		<item>Government Ministers</item>
		<item>News Media</item>
		<item>Traffic Police</item>
	</string-array>

	<string name="email_details">
SPAD: Land Transport Commission\n\n
Government Departments: LPKP, JPJ, KPDNKK\n\n
Consumer Groups: TRANSIT, NCCC\n\n
Government Ministers: Minister of Transport, Minister of Tourism, Prime Minister\n\n
News Media: The Star, Star Metro, Malay Mail, New Straits Times, New Straits Times Streets, The Sun, Malaysia Kini, The Malaysian Insider\n\n
Traffic Police: rmp@rmp.gov.my
	</string>

	<string-array name="tel_number_names">
		<item>LPKP: Commercial Vehicle Licensing Board</item>
		<item>JPJ: Road Transport Department</item>
		<item>NCCC: National Consumer Complaints Centre</item>
	</string-array>

	<string name="spad_contact">
		SPAD\n
		Land Transport Commission\n
		aduan@spad.gov.my\n
		http://www.spad.gov.my\n
		http://twitter.com/aduanSPAD\n
	</string>
	<string name="lpkp_contact">
		LPKP\n
		Commercial Vehicle Licensing Board\n
		SMS ADUAN LPKP to 15888\n
		1-800-88-96-00\n
		aduan@lpkp.gov.my\n
		http://www.lpkp.gov.my\n
	</string>
	<string name="jpj_contact">
		JPJ\n
		Road Transport Department\n
		03 8888 4244\n
		aduantrafik@jpj.gov.my\n
		http://portal.jpj.gov.my\n
	</string>
	<string name="kpdnkk_contact">
		KPDNKK\n
		Ministry of Domestic Trade, Cooperative and Consumerism\n
		e-aduan@kpdnkk.gov.my\n
		http://eaduan.kpdnkk.gov.my\n
	</string>
	<string name="motour_contact">
		Ministry of Tourism\n
		03 8891 7000\n
		info@motour.gov.my\n
		http://www.motour.gov.my\n
		http://www.motour.gov.my/en/contact-us/feedback/public-complaints.html\n
	</string>
	<string name="pcb_contact">
		Public Complaints Bureau\n
		03 8872 5777\n
		http://www.pcb.gov.my\n
		http://apps1.pcb.gov.my/eApps/bpaia/ducmpl/AduCmplPublic/add.do?aplCode=en\n
	</string>
	<string name="pemudah_contact">
		PEMUDAH\n
		Entrepreneur and Cooperatives Development Ministry\n
		03 6200 0185\n
		bahria@miti.gov.my\n
		http://www.pemudah.gov.my\n
		http://www.pemudah.gov.my/web/guest/hubungi\n
	</string>
	<string name="ttpm_contact">
		Tribunal for Consumer Claims Malaysia\n
		1 800 88 9811 or 03 8882 5822\n
		http://ttpm.kpdnkk.gov.my\n
	</string>
	<string name="transit_contact">
		TRANSIT\n
		A group of concerned citizens for the improvement of mass transit\n
		klangvalley.transit@gmail.com\n
		http://transitmy.org\n
		http://twitter.com/transitmy\n
	</string>
	<string name="nccc_contact">
		NCCC\n
		National Consumer Complaints Centre\n
		03 7877 9000\n
		nccc@nccc.org.my
		http://www.nccc.org.my\n
		http://www.nccc.org.my/v2/index.php/e-aduan\n
		http://twitter.com/myaduan\n
	</string>
	<string name="spad_chairman_contact">
		Syed Hamid Albar\n
		Chairman of SPAD\n
		http://twitter.com/syedhamidalbar\n
	</string>
	<string name="motransport_contact">
		YB Dato Seri Kong Cho Ha\n
		Minister of Transport\n
		menteri@mot.gov.my\n
		http://twitter.com/kongchoha\n
	</string>
	<string name="motourism_contact">
		YB Dato Sri Dr. Ng Yen Yen\n
		Minister of Tourism\n
		yenyenng@motour.gov.my\n
		http://twitter.com/DrYenYen\n
	</string>
	<string name="prime_minister_contact">
		Dato Sri Haji Mohammad Najib bin Tun Haji Abdul Razak\n
		Prime Minister\n
		najib@1malaysia.com.my\n
		http://twitter.com/NajibRazak\n
	</string>
	<string name="traffic_police_contact">
		Traffic Police\n
		rmp@rmp.gov.my\n
		http://www.rmp.gov.my\n
	</string>
	<string name="news_media_contact">
		The Star\n
		editor@thestar.com.my\n\n
		Star Metro\n
		metro@thestar.com.my\n\n
		Malay Mail\n
		mmnews@mmail.com.my\n\n
		New Straits Times\n
		syedn@nst.com.my\n
		letters@nst.com.my\n\n
		New Straits Times Streets\n
		streets@nst.com.my\n\n
		The Sun\n
		letters@thesundaily.com\n\n
		Malaysia Kini\n
		editor@malaysiakini.com.my\n\n
		The Malaysian Insider\n
		editor@themalaysianinsider.com\n\n
	</string>

	<string name="penang_fare_rate">
	RM4 for first km\n
	10 cents for each additional 115 meters\n
	OR\n
	RM4 for first 3 minutes\n
	10 cents for each additional 21 seconds\n\n

	http://www.spad.gov.my/downloads/forms/Peninsular_Malaysia_Public_Transport_Fare_Rate_Table.pdf\n\n

	Additional Charges:\n
	50% surcharge between midnight and 6:00AM\n
	RM3 for telephone bookings\n
	RM1 for 3rd adult passenger (max 4) and/or baggage stored in boot\n
	Actual road toll charges
	</string>

	<string name="kl_fare_rate">
	RM3 for first km\n
	10 cents for each additional 115 meters\n
	OR\n
	RM3 for first 3 minutes\n
	10 cents for each additional 21 seconds\n\n

	http://www.spad.gov.my/downloads/forms/Peninsular_Malaysia_Public_Transport_Fare_Rate_Table.pdf\n\n

	Additional Charges:\n
	Double rate for executive taxi\n
	50% surcharge between midnight and 6:00AM\n
	RM3 for telephone bookings\n
	RM1 for 3rd adult passenger (max 4) and/or baggage stored in boot\n
	Actual road toll charges
	</string>

	<string name="airports_fare_rate">
	Taxis at airports operate on a pre-paid coupon system.
	</string>

	<string name="gpl">
Copyright (C) 2012 Sweetie Piggy Apps sweetiepiggyapps@gmail.com\n\n
Report Malaysia Taxi is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.\n\n
Report Malaysia Taxi is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.\n\n
You should have received a copy of the GNU General Public License
    along with Report Malaysia Taxi; if not, see http://www.gnu.org/licenses/.
	</string>
</resources>

