<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012 Sweetie Piggy Apps <sweetiepiggyapps@gmail.com>

    This file is part of Report Malaysia Taxi.

    Report Malaysia Taxi is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Report Malaysia Taxi is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Report Malaysia Taxi; if not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:xmlns:android="http://schemas.android.com/apk/res/android" >
		<TextView
			android:id="@+id/fare_label"
			style="@android:style/TextAppearance.Large"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/fare" />
		<EditText
			android:id="@+id/calc_fare_entry"
			style="@android:style/TextAppearance.Large"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:editable="false"
			android:focusable="false"
			android:inputType="none" />
		<TextView
			android:id="@+id/distance_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/distance"
			android:textStyle="bold" />
		<EditText
			android:id="@+id/distance_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/distance_hint"
			android:inputType="numberDecimal" />
		<TextView
			android:id="@+id/time_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/time"
			android:textStyle="bold" />
		<EditText
			android:id="@+id/time_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/time_hint"
			android:inputType="number" />
		<TextView
			android:id="@+id/passengers_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/passengers"
			android:textStyle="bold" />
		<EditText
			android:id="@+id/passengers_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/passengers_hint"
			android:inputType="number" />
		<CheckBox
			android:id="@+id/midnight_checkbox"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/midnight" />
		<CheckBox
			android:id="@+id/executive_checkbox"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/executive" />
		<CheckBox
			android:id="@+id/telbooking_checkbox"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/telbooking" />
	</LinearLayout>
</ScrollView>