<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012,2013
    Sweetie Piggy Apps <sweetiepiggyapps@gmail.com>
    CyanogenMod-X <rdxperiaz@gmail.com>

    This file is part of Report Malaysia Taxi.

    Report Malaysia Taxi is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Report Malaysia Taxi is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Report Malaysia Taxi; if not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/fare_rate"
		android:icon="@android:drawable/ic_dialog_info"
		android:title="@string/fare_rate" />
	<item android:id="@+id/fare_calc"
		android:icon="@android:drawable/ic_dialog_info"
		android:title="@string/fare_calc" />
	<item android:id="@+id/contacts"
		android:icon="@android:drawable/ic_dialog_info"
		android:title="@string/contacts" />
	<item android:id="@+id/about"
		android:icon="@android:drawable/ic_dialog_info"
		android:title="@string/about" />
	<item android:id="@+id/source"
		android:icon="@android:drawable/ic_menu_view"
		android:title="@string/view_source" />
</menu>

